--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.course-name {
+  /* border: 1px solid #333; */
+  box-shadow: 5px 5px 10px #ddd;
+  width: 100%;
+  height: 315px;
+  padding: 20px 75px;
+  /* padding-left */
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.course-container {
+  display:flex;
+  width:100%; 
+  padding-top: 50px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.course-details {
+  width: 80%;
 }
-
-.App-link {
-  color: #61dafb;
+.title{
+  margin-right:300px;
+  padding:15px;
+  margin-bottom: 30px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.fullPage {
+  background-color:#fff;
+}
+.header-title{
+  margin:0;
+}
+.cart {
+  width:20%;
+  border-left:1px solid lightgray;
+  position: sticky;
+  /* height:100%; */
+  top:70px;   
+}
+.header {
+  margin-bottom:30px;
+  position:sticky;
+  top:0;
+  z-index: 1;
+}
+img{
+  width: 450px;
+  height: 315px;
 }
